--- a/work/okeyLib/okeyLib.vcxproj
+++ b/work/okeyLib/okeyLib.vcxproj
@@ -116,8 +116,10 @@
     <ClCompile Include="inc\ToolKit.cpp" />
     <ClCompile Include="inc\TreeNodeBase.cpp" />
     <ClCompile Include="inc\UtilID.cpp" />
+    <ClCompile Include="log\ArchiveStrategy.cpp" />
     <ClCompile Include="log\Channel.cpp" />
     <ClCompile Include="log\LogChannel.cpp" />
+    <ClCompile Include="log\LogFile.cpp" />
     <ClCompile Include="log\Logger.cpp" />
     <ClCompile Include="NetWork\Acceptor.cpp" />
     <ClCompile Include="NetWork\CompleteOperation.cpp" />
@@ -145,6 +147,7 @@
     <ClCompile Include="process\ProcessPipe.cpp" />
     <ClCompile Include="process\Process.cpp" />
     <ClCompile Include="process\ShareMemory.cpp" />
+    <ClCompile Include="Stream\DeflatingStream.cpp" />
     <ClCompile Include="Stream\FileStream.cpp" />
     <ClCompile Include="Stream\FileStreamBuf.cpp" />
     <ClCompile Include="Stream\MemoryStreamBuf.cpp" />
@@ -174,6 +177,21 @@
     <ClCompile Include="tinyxml\tinyxmlparser.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="zlib\adler32.c" />
+    <ClCompile Include="zlib\compress.c" />
+    <ClCompile Include="zlib\crc32.c" />
+    <ClCompile Include="zlib\deflate.c" />
+    <ClCompile Include="zlib\gzclose.c" />
+    <ClCompile Include="zlib\gzlib.c" />
+    <ClCompile Include="zlib\gzread.c" />
+    <ClCompile Include="zlib\gzwrite.c" />
+    <ClCompile Include="zlib\infback.c" />
+    <ClCompile Include="zlib\inffast.c" />
+    <ClCompile Include="zlib\inflate.c" />
+    <ClCompile Include="zlib\inftrees.c" />
+    <ClCompile Include="zlib\trees.c" />
+    <ClCompile Include="zlib\uncompr.c" />
+    <ClCompile Include="zlib\zutil.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Events\AbstractDelegate.h" />
@@ -256,6 +274,7 @@
     <ClInclude Include="log\Channel.h" />
     <ClInclude Include="log\Configurable.h" />
     <ClInclude Include="log\LogChannel.h" />
+    <ClInclude Include="log\LogFile.h" />
     <ClInclude Include="log\Logger.h" />
     <ClInclude Include="NetWork\Acceptor.h" />
     <ClInclude Include="NetWork\CompleteOperation.h" />
@@ -291,6 +310,7 @@
     <ClInclude Include="Stream\BufferAlloctor.h" />
     <ClInclude Include="Stream\BufferedBidirectionalStreamBuf.h" />
     <ClInclude Include="Stream\BufferedStreamBuf.h" />
+    <ClInclude Include="Stream\DeflatingStream.h" />
     <ClInclude Include="Stream\FileStream.h" />
     <ClInclude Include="Stream\FileStreamBuf.h" />
     <ClInclude Include="Stream\MemoryStreamBuf.h" />
@@ -326,6 +346,17 @@
     <ClInclude Include="Thread\ThreadTarget.h" />
     <ClInclude Include="Thread\Timer.h" />
     <ClInclude Include="tinyxml\tinyxml.h" />
+    <ClInclude Include="zlib\crc32.h" />
+    <ClInclude Include="zlib\deflate.h" />
+    <ClInclude Include="zlib\gzguts.h" />
+    <ClInclude Include="zlib\inffast.h" />
+    <ClInclude Include="zlib\inffixed.h" />
+    <ClInclude Include="zlib\inflate.h" />
+    <ClInclude Include="zlib\inftrees.h" />
+    <ClInclude Include="zlib\trees.h" />
+    <ClInclude Include="zlib\zconf.h" />
+    <ClInclude Include="zlib\zlib.h" />
+    <ClInclude Include="zlib\zutil.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="inc\PoolAllocator.cpp">
