--- a/work/okeyLib/okeyLib.vcxproj
+++ b/work/okeyLib/okeyLib.vcxproj
@@ -121,6 +121,8 @@
     <ClCompile Include="log\Channel.cpp" />
     <ClCompile Include="log\ConsoleChannel.cpp" />
     <ClCompile Include="log\FileChannel.cpp" />
+    <ClCompile Include="log\Formatter.cpp" />
+    <ClCompile Include="log\FormatingChannel.cpp" />
     <ClCompile Include="log\LogChannel.cpp" />
     <ClCompile Include="log\LogFile.cpp" />
     <ClCompile Include="log\Logger.cpp" />
@@ -284,6 +286,8 @@
     <ClInclude Include="log\Configurable.h" />
     <ClInclude Include="log\ConsoleChannel.h" />
     <ClInclude Include="log\FileChannel.h" />
+    <ClInclude Include="log\Formatter.h" />
+    <ClInclude Include="log\FormatingChannel.h" />
     <ClInclude Include="log\LogChannel.h" />
     <ClInclude Include="log\LogFile.h" />
     <ClInclude Include="log\Logger.h" />
